plantilla principal que muestra la data y la funcion ordenar

--- a/src/index.html
+++ b/src/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Data Lovers</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Data Lovers</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-</head>
+  <body>
+    <header>
+      <h1>aqui va el pokepedia</h1>
+    </header>
+    <main class="main-cont">
+      <section class="size-cont space-left">
+        <article
+          id="cont-data"
+          class="grid size-cont scroll space-left"
+        ></article>
+        <!-- <article
+          id="order-data"
+          class="grid size-cont scroll space-left"
+        ></article> -->
+      </section>
 
-<body>
+      <aside id="id-btn" class="aside">
+        <button id="btn-name" class="aside">ho</button>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+          architecto soluta molestias quasi corrupti a, obcaecati minus magnam
+          repudiandae ipsa exercitationem iste quaerat reiciendis sint possimus
+          aspernatur? Rem, voluptatem optio.
+        </p>
+      </aside>
+    </main>
+    <footer>
+      <h5>haqui va footer</h5>
+    </footer>
 
-  <header>
-    <h1>aqui va el pokepedia</h1>
-  </header>
-  <main class="main-cont">
-    <section class="size-cont space-left">
-
-      <article id="cont-data" class="grid size-cont scroll space-left"></article>
-
-
-
-    </section>
-
-    <aside class="aside">
-      <button class="aside">ho</button>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod architecto soluta molestias quasi corrupti a,
-        obcaecati minus magnam repudiandae ipsa exercitationem iste quaerat reiciendis sint possimus aspernatur? Rem,
-        voluptatem optio.</p>
-
-    </aside>
-  </main>
-  <footer>
-    <h5>haqui va footer</h5>
-  </footer>
-
-
-
-  <!-- <header class="header_poke">
+    <!-- <header class="header_poke">
     <nav class="nav_list">
       <ul class="ulist">
         <li class="li-item"><a href="">HOME</a></li>
@@ -72,7 +76,7 @@
             <option value="a-z" selected>a-z</option>
             <option value="z-a">z-a</option>
           </select></li> -->
-  <!-- <button id="btn-order">ordenar</button>
+    <!-- <button id="btn-order">ordenar</button>
         <li class="sub-menu"><a href="">ESTADISTICA</a></li>
       </ul>
     </nav>
@@ -90,14 +94,12 @@
       <main id="cont-main">
 
       </main> -->
-  <!-- <script src="./data/injuries/injuries.js"></script> -->
-  <script src="./data/pokemon/pokemon.js"></script>
-  <!-- <script src="./data/steam/steam.js"></script> -->
-  <!-- <script src="./data/worldbank/worldbank.js"></script> -->
-  <!-- <script src="./data/lol/lol.js"></script> -->
-  <script src="data.js"></script>
-  <script src="main.js"></script>
-
-</body>
-
+    <!-- <script src="./data/injuries/injuries.js"></script> -->
+    <script src="./data/pokemon/pokemon.js"></script>
+    <!-- <script src="./data/steam/steam.js"></script> -->
+    <!-- <script src="./data/worldbank/worldbank.js"></script> -->
+    <!-- <script src="./data/lol/lol.js"></script> -->
+    <script src="data.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
