--- a/src/index.html
+++ b/src/index.html
@@ -20,20 +20,17 @@
           id="cont-data"
           class="grid size-cont scroll space-left"
         ></article>
-        <!-- <article
-          id="order-data"
-          class="grid size-cont scroll space-left"
-        ></article> -->
       </section>
 
-      <aside id="id-btn" class="aside">
-        <button id="btn-name" class="aside">ho</button>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-          architecto soluta molestias quasi corrupti a, obcaecati minus magnam
-          repudiandae ipsa exercitationem iste quaerat reiciendis sint possimus
-          aspernatur? Rem, voluptatem optio.
-        </p>
+      <aside class="aside">
+        <form action="" id="menu-button">
+          <label for="">¿Cuantos tipos de Pokemones hay?</label>
+          <select name="order" id="btn-order">
+            <option value="ordenar" selected>ordenar</option>
+            <option value="a-z">a-z</option>
+            <option value="z-a">z-a</option>
+          </select>
+        </form>
       </aside>
     </main>
     <footer>
