--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 
   <body>
     <header>
-      <h1>aqui va el pokepedia</h1>
+      <img src="tittlepokepedia.png" alt="" class="head" width="20%">
+     
     </header>
     <main class="main-cont">
       <section class="size-cont space-left">
