Añado estilos como el sketch de alta fidelidad

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,26 @@
 
       <aside id="id-btn" class="aside">
         <button id="btn-name" class="aside">ho</button>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-          architecto soluta molestias quasi corrupti a, obcaecati minus magnam
-          repudiandae ipsa exercitationem iste quaerat reiciendis sint possimus
-          aspernatur? Rem, voluptatem optio.
-        </p>
+      </section>
+  
+
+        <select name="" id="btn_filter" class="btn_filter">
+          <option value="Water">Agua</option>
+           <option value="Fire">Fuego</option>
+            <option value="Grass">Planta</option>
+           <option value="Poison">Veneno</option>
+            <option value="Flying">Volador</option>
+           <option value="Bug">Insecto</option>
+            <option value="Normal">Normal</option>
+           <option value="Electric">Electrico</option>
+            <option value="Ground">Tierra</option>
+           <option value="Fighting">Lucha</option>
+            <option value="Psychic">Psíquico</option>
+           <option value="Ice">Hielo</option>
+          <option value="Ghost">Fantasma</option>
+          <option value="Rock">Roca</option>
+          <option value="Dragon">Dragon</option>
+        </select>
       </aside>
     </main>
     <footer>
