boton ordenar y filtrar

--- a/src/index.html
+++ b/src/index.html
@@ -12,33 +12,39 @@
 
   <body>
     <header>
-      <img src="tittlepokepedia.png" alt="" class="head" width="20%">
-     
+      <img src="tittlepokepedia.png" alt="" class="head" width="15%" />
     </header>
-    <main class="main-cont">
+    <main class="main-cont ">
       <section class="size-cont space-left">
         <article
           id="cont-data"
-          class="grid size-cont scroll space-left"
+          class="grid size-cont scroll space-left "
         ></article>
-        <!-- <article
-          id="order-data"
-          class="grid size-cont scroll space-left"
-        ></article> -->
       </section>
 
-      <aside id="id-btn" class="aside">
-        <button id="btn-name" class="aside">ho</button>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-          architecto soluta molestias quasi corrupti a, obcaecati minus magnam
-          repudiandae ipsa exercitationem iste quaerat reiciendis sint possimus
-          aspernatur? Rem, voluptatem optio.
-        </p>
+      <aside class="aside">
+        <form action="" id="menu-button">
+          <h2 for="">¿Cuantos tipos de Pokemones hay?</h2>
+          <select name="filter" id="btn-filter" class="style-btn">
+            <option value="">TIPOS</option>
+          </select>
+          <h2 for="">Ordenalos alfabéticamente:</h2>
+          <select
+            name="order"
+            id="btn-order"
+            class="
+          style-btn"
+          >
+            <option value="ordenar" selected>ORDENAR</option>
+            <option value="a-z">a-z</option>
+            <option value="z-a">z-a</option>
+          </select>
+          <h2 for="">¿Estadistica?</h2>
+        </form>
       </aside>
     </main>
     <footer>
-      <h5>haqui va footer</h5>
+      <h5></h5>
     </footer>
 
     <!-- <header class="header_poke">
