funcion promedio de pesos falta imprimir en la pag pricipal

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,13 @@
             <option value="a-z">a-z</option>
             <option value="z-a">z-a</option>
           </select>
-          <h2 for="">¿Estadistica?</h2>
+          
+
+          <section class="stata">
+            <h2 for="">Datos curiosos</h2>
+            <h3>El peso promedio de los pokemones es:</h3> 
+                       
+          </section> 
         </form>
       </aside>
     </main>
