--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
             <h2 for="">Datos curiosos...</h2>
             <br />
           </section>
+          <section id="test"></section>
         </form>
       </aside>
     </main>
