--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Data Lovers</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
     <header class="header">
-      <img src="image/tittlepokepedia.png" alt="" class="head" width="15%" />
-      <!-- <h1 class="header">ho</h1> -->
+      <img src="image/tittlepokepedia.png" class="head" />
     </header>
     <main class="main-cont ">
       <section class="size-cont space-left">
-        <article
-          id="cont-data"
-          class="grid size-cont scroll space-left "
-        ></article>
+        <article id="cont-data" class="grid size-cont scroll space-left ">
+          <h6 class="style-title">Pokemones:</h6>
+        </article>
       </section>
-
       <aside class="aside">
-        <form action="" id="menu-button">
-          <h2 for="">¿Cuantos tipos de Pokemones hay?</h2>
+        <form action="button-menu" id="menu-button">
+          <h2>¿Cuantos tipos de Pokemones hay?</h2>
           <select name="filter" id="btn-filter" class="style-btn">
             <option value="">TIPOS</option>
           </select>
-          <h2 for="">Ordenalos alfabéticamente:</h2>
+          <h2>Ordenalos alfabéticamente:</h2>
           <select
             name="order"
             id="btn-order"
@@ -43,15 +36,14 @@
           </select>
 
           <section class="style-btn" id="stata">
-            <h2 for="">Datos curiosos:</h2>
+            <h2>Datos curiosos:</h2>
             <br />
           </section>
-          <section id="test"></section>
         </form>
       </aside>
     </main>
     <footer>
-      <h5></h5>
+      <h6 class="style-title">LABORATORIA</h6>
     </footer>
     <!-- <script src="./data/injuries/injuries.js"></script> -->
     <script src="./data/pokemon/pokemon.js"></script>
