header con mismo estilo

--- a/src/index.html
+++ b/src/index.html
@@ -26,24 +26,24 @@
 
       <aside class="aside">
         <form action="" id="menu-button">
-          <h2 for="">¿Cuantos tipos de Pokemones hay?</h2>
+          <h2 for="">Conoce los tipos de pokemones que existen</h2>
           <select name="filter" id="btn-filter" class="style-btn">
-            <option value="">TIPOS</option>
+            <option value="">Tipos</option>
           </select>
-          <h2 for="">Ordenalos alfabéticamente:</h2>
+          <h2 for="">Ordénalos alfabéticamente:</h2>
           <select
             name="order"
             id="btn-order"
-            class="
+            class=" 
           style-btn"
           >
-            <option value="ordenar" selected>ORDENAR</option>
+            <option value="ordenar" selected>Ordenar</option>
             <option value="a-z">a-z</option>
             <option value="z-a">z-a</option>
           </select>
 
           <section class="style-btn" id="stata">
-            <h2 for="">Datos curiosos:</h2>
+            <h2 for="">Dato curioso:</h2>
             <br />
           </section>
           <section id="test"></section>
