--- a/src/index.html
+++ b/src/index.html
@@ -9,41 +9,40 @@
 
   <body>
     <header class="header">
-      <img src="image/tittlepokepedia.png" class="head" />
+      <img src="image/tittlepokepedia.png" class="head" alt="" />
     </header>
     <main class="main-cont ">
       <section class="size-cont space-left">
+        <h6>conocelos</h6>
         <article id="cont-data" class="grid size-cont scroll space-left ">
-                  </article>
+          <h6>estos son los pokemones:</h6>
+        </article>
       </section>
       <aside class="aside">
         <form action="button-menu" id="menu-button">
-            <h2 for="">Ordénalos alfabéticamente:</h2>
-            <select
-              name="order"
-              id="btn-order"
-              class=" 
+          <h2>Ordénalos alfabéticamente:</h2>
+          <select
+            name="order"
+            id="btn-order"
+            class=" 
             style-btn"
-            >
-              <option value="ordenar" selected>Ordenar</option>
-              <option value="a-z">a-z</option>
-              <option value="z-a">z-a</option>
-            </select>
+          >
+            <option value="ordenar" selected>Ordenar</option>
+            <option value="a-z">a-z</option>
+            <option value="z-a">z-a</option>
+          </select>
           <h2>Conoce los tipos de pokemones que existen</h2>
           <select name="filter" id="btn-filter" class="style-btn">
             <option value="">Tipos</option>
           </select>
-          
 
           <section class="style-btn" id="stata">
-            <h2 for="">Dato curioso:</h2>
+            <h2>Dato curioso:</h2>
             <br />
           </section>
-          <section id="test"></section>
         </form>
       </aside>
     </main>
-
 
     <!-- <script src="./data/injuries/injuries.js"></script> -->
     <script src="./data/pokemon/pokemon.js"></script>
