--- a/src/index.html
+++ b/src/index.html
@@ -41,15 +41,23 @@
             <br />
           </section>
         </form>
+        <div id="draw-estata" class="style-draw"></div>
       </aside>
     </main>
 
     <!-- <script src="./data/injuries/injuries.js"></script> -->
+    <script
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
+
     <script src="./data/pokemon/pokemon.js"></script>
+
     <!-- <script src="./data/steam/steam.js"></script> -->
     <!-- <script src="./data/worldbank/worldbank.js"></script> -->
     <!-- <script src="./data/lol/lol.js"></script> -->
     <script src="data.js"></script>
     <script src="main.js"></script>
+    <!-- <script src="https://www.google.com/jsapi"></script> -->
   </body>
 </html>
