Probando git avanzado

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           <select name="filter" id="btn-filter" class="style-btn">
             <option value="">Tipos</option>
           </select>
-
+          <h1>hola esto es prueba de git avanzando</h1>
           <section class="style-btn" id="stata">
             <h2>Dato curioso:</h2>
             <br />
